@@ -3,7 +3,7 @@
 public interface Carte {
 
 
-	public String[] seme = {"cuori","quadri","picche","fiori "};
+	public String[] seme = {"cuori","quadri","picche","fiori"};
 	public char[] valore = {'2','3','4','5','6','7','8','9','1','J','Q','K','A'};
 	
 	public String display_Seme();
