@@ -1,0 +1,11 @@
+/**
+ * Created by cris on 27/03/15.
+ */
+public class cartaPosFinale {
+    Carta carta;
+    int[] pos={0,0};
+    public cartaPosFinale(Carta x, int[] pos){
+        carta=x;
+        this.pos=pos;
+    }
+}
