@@ -1,9 +1,13 @@
 import javax.swing.*;
+import javax.swing.text.html.HTMLDocument;
 import java.awt.*;
 
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
+import java.awt.event.MouseMotionListener;
 import java.awt.geom.AffineTransform;
+import java.util.ArrayList;
+import java.util.Iterator;
 
 
 public class provaCarte extends JFrame {
@@ -24,17 +28,22 @@ public class provaCarte extends JFrame {
     }
 
 
-    public class MyCanvas extends JPanel implements MouseListener{
+    public class MyCanvas extends JPanel implements MouseListener,MouseMotionListener{
         private Mazzo mazzo;
         private Carta first;
         private Carta visualizzata;
-        private int x, y;
+        private int dx,dy;
+        private ArrayList<cartaPosFinale> carteSpostate = new ArrayList<cartaPosFinale>();
+
 
 
         public MyCanvas(Mazzo m){
             mazzo=m;
             setBackground(Color.green);
+            addMouseMotionListener(this);
             addMouseListener(this);
+            pescaPrima();
+
 
         }
         public Dimension getPreferredSize(){
@@ -45,45 +54,71 @@ public class provaCarte extends JFrame {
             super.paintComponent(g);
             Graphics2D g2 = (Graphics2D) g;
             AffineTransform DEFAULT = g2.getTransform();
-
-                if(!mazzo.isEmpty()) {
-                    first = mazzo.prima_Carta();
+                if(first!=null && !mazzo.isEmpty())
                     first.drawCartaBack(g2);
 
-                }
-                if(visualizzata!=null){
-
+            if(!carteSpostate.isEmpty()){
+                Iterator<cartaPosFinale> it = carteSpostate.iterator();
+                while(it.hasNext()){
+                    cartaPosFinale  c = it.next();
+                    int x= c.pos[0];
+                    int y= c.pos[1];
                     AffineTransform at = AffineTransform.getTranslateInstance(x,y);
                     g2.setTransform(at);
-                    visualizzata.drawCarta(g2);
-                    
-                    }
+                    c.carta.drawCarta(g2);
+                }
+            }
+            if(visualizzata!=null){
+                AffineTransform at = AffineTransform.getTranslateInstance(dx,dy);
+                g2.setTransform(at);
+                visualizzata.drawCarta(g2);
+            }
 
             g2.setTransform(DEFAULT);
 
 
 
         }
+        public void pescaPrima(){
+            first=mazzo.prima_Carta();
+        }
+        public void daVisualizzare(){
+            visualizzata = first;
+            first=mazzo.prima_Carta();
+        }
 
 
 
         @Override
         public void mouseClicked(MouseEvent mouseEvent) {
-            x=mouseEvent.getX();
-            y=mouseEvent.getY();
-            visualizzata=first;
-            repaint();
+
+
+
+
+
 
 
         }
 
         @Override
         public void mousePressed(MouseEvent mouseEvent) {
+            if(mouseEvent.getX()<100 && mouseEvent.getY() < 140)
+                daVisualizzare();
+            else visualizzata=null;
 
         }
 
         @Override
         public void mouseReleased(MouseEvent mouseEvent) {
+            if(visualizzata!=null) {
+                int[] pos = {dx, dy};
+
+                carteSpostate.add(new cartaPosFinale(visualizzata, pos));
+
+            }
+            repaint();
+
+
 
         }
 
@@ -100,6 +135,24 @@ public class provaCarte extends JFrame {
 
 
 
+        @Override
+        public void mouseDragged(MouseEvent mouseEvent) {
+
+            System.out.println("dragged");
+            dx=mouseEvent.getX();
+            dy=mouseEvent.getY();
+            repaint();
+
+
+
+
+        }
+
+        @Override
+        public void mouseMoved(MouseEvent mouseEvent) {
+
+
+        }
     }
     public static void main(String[] args){
         Mazzo deck = new Mazzo();
